--- a/css/style.css
+++ b/css/style.css
@@ -113,7 +113,7 @@ header::after {
   margin: 0 auto;
 }
 .header_content {
-  padding: 108px 0 200px;
+  padding: 108px 0 181px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -215,6 +215,7 @@ header::after {
   max-width: 540px;
   opacity: 0.5;
   line-height: 28px;
+  margin-top: 16px;
 }
 .features_page_sect {
   display: flex;
@@ -279,7 +280,7 @@ header::after {
   letter-spacing: 0.25px;
 }
 .tips {
-  padding-bottom: 150px;
+  padding-bottom: 100px;
 }
 .tips_top_content {
   display: flex;
