--- a/css/style.css
+++ b/css/style.css
@@ -435,14 +435,14 @@ header::after {
   display: flex;
   align-items: center;
   flex-direction: column;
-  max-width: 442px;
+  max-width: 450px;
 }
 .contact_content p {
   font-size: 13px;
-  color: var(--footer-contact-content-color);
+  color: white;
   line-height: 40px;
   letter-spacing: 5px;
-  max-width: 272px;
+  max-width: 280px;
 }
 .contact_content h1 {
   color: var(--footer-contact-content-color);
