--- a/css/style.css
+++ b/css/style.css
@@ -113,7 +113,7 @@ header::after {
   margin: 0 auto;
 }
 .header_content {
-  padding: 108px 0 120px;
+  padding: 108px 0 181pxpx;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -280,7 +280,7 @@ header::after {
   letter-spacing: 0.25px;
 }
 .tips {
-  padding-bottom: 40px;
+  padding-bottom: 150px;
 }
 .tips_top_content {
   display: flex;
@@ -435,14 +435,14 @@ header::after {
   display: flex;
   align-items: center;
   flex-direction: column;
-  max-width: 450px;
+  max-width: 442px;
 }
 .contact_content p {
   font-size: 13px;
-  color: white;
+  color: var(--footer-contact-content-color);
   line-height: 40px;
   letter-spacing: 5px;
-  max-width: 280px;
+  max-width: 290px;
 }
 .contact_content h1 {
   color: var(--footer-contact-content-color);
@@ -470,7 +470,7 @@ header::after {
   letter-spacing: 0.25px;
 }
 .contact_btn {
-  padding: 10px 22px;
+  padding: 10px 23px;
   background-color: #fa5959;
   color: var(--button-color-content);
 }
