--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,7 @@ button {
   outline: none;
   border: none;
   border-radius: 5px;
-  transition: all 0.3s ease ;
+  transition: all 0.3s ease;
 }
 .icons {
   display: none;
@@ -454,7 +454,6 @@ header::after {
   display: flex;
   gap: 16px;
   align-items: center;
-  
 }
 .contact_input #email {
   outline: none;
@@ -654,6 +653,7 @@ footer {
     left: 0;
     z-index: 100;
     margin-top: 0;
+    transition-delay: 0.31s;
   }
   /* nav::before {
     content: "";
@@ -676,12 +676,19 @@ footer {
   #close_bar {
     display: none;
   }
-  #check:checked ~ .icons #menu_bar {
+
+  #check:checked + nav {
+    background-color: rgb(47, 53, 78, 0.9);
+    transition: 0s;
+  }
+
+  #check:checked + nav .icons #menu_bar {
     display: none;
   }
-  #check:checked ~ .icons #close_bar {
+  #check:checked + nav .icons #close_bar {
     display: inline-flex;
   }
+
   .nav_content {
     position: relative;
     padding: 48px 5% 20px;
@@ -737,7 +744,7 @@ footer {
   .social_icons_nav i:hover {
     color: #fa5959;
   }
-  #check:checked ~ .navlist {
+  #check:checked + nav .navlist {
     height: 40rem;
   }
 }
@@ -929,6 +936,7 @@ footer {
     width: 600px;
     right: -240px;
   }
+}
 @media screen and (max-width: 402px) {
   header::after {
     width: 600px;
@@ -996,13 +1004,6 @@ footer {
     left: -750px;
   }
 }
-
-
-
-
-
-
-
 
 /* gitni joriy qilish */
 /* 1. Git init
